adicionando client logado em usecases get